# SWE-bench-gitlab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/blog/posts/250808-gpt5/: default.py
swebench/: __init__.py
swebench/collect/: README.md  build_dataset.py  build_dataset_ft.py  convert_to_langsmith.py  get_tasks_pipeline.py  get_top_pypi.py  github_client.py  gitlab_client.py  platform_client.py  print_pulls.py  utils.py
swebench/collect/cleanup/: remove_envs.py
swebench/collect/make_lite/: criteria.py  make_lite.py
swebench/harness/: __init__.py  docker_build.py  docker_utils.py  grading.py  prepare_images.py  remove_containers.py  reporting.py  run_evaluation.py  utils.py
swebench/harness/constants/: __init__.py  java.py
swebench/harness/dockerfiles/: __init__.py
swebench/harness/log_parsers/: go.py  java.py  javascript.py  php.py
swebench/harness/modal_eval/: __init__.py  run_evaluation_modal.py  run_evaluation_modal_entrypoint.py
swebench/harness/test_spec/: __init__.py  create_scripts.py  javascript.py  python.py  test_spec.py  utils.py
swebench/inference/: run_api.py  run_live.py  run_llama.py
swebench/inference/llamao/: distributed_attention.py  modeling_flash_llama.py
swebench/inference/make_datasets/: bm25_retrieval.py  create_instance.py  create_text_dataset.py  eval_retrieval.py  tokenize_dataset.py  utils.py
swebench/versioning/: get_versions.py
swebench/versioning/extract_web/: get_versions_astropy.py  get_versions_matplotlib.py  get_versions_pvlib-python.py  get_versions_pydicom.py  get_versions_sqlfluff.py  get_versions_xarray.py
tests/: test_evaluation.py  test_harness_utils.py
